--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -5,15 +5,15 @@
 </head>
 
 
-<body class="dark-theme"> 
-  {% include 'blog/partials/_header.html' %}
+<body>
+  <div class="blog-wrapper">
+    {% include 'blog/partials/_header.html' %}
 
-  {% block content %}{% endblock content %}
+    {% block content %}{% endblock content %}
 
-  {% include 'blog/partials/_pagination.html' %}
+    {% include 'blog/partials/_pagination.html' %}
 
-  {% include 'blog/partials/_footer.html' %}
-
-  {% include 'blog/partials/_temp.html' %}
+    {% include 'blog/partials/_footer.html' %}
+  </div>
 </body>
 </html>
