--- a/djangoapp/blog/templates/blog/partials/_post-card.html
+++ b/djangoapp/blog/templates/blog/partials/_post-card.html
@@ -1,9 +1,8 @@
 <article class="card">
 
-
   {% if post.cover %}
     <div class="card-cover-wrapper">
-      <a href="{% url 'blog:post' post.slug %}" class="card-cover-link">
+      <a href="{{ post.get_absolute_url }}" class="card-cover-link">
         <img 
           class="card-cover"
           loading="lazy"
@@ -13,24 +12,21 @@
       </a>
     </div>
   {% endif %}
-
   <div class="card-text-wrapper">
     <div class="card-title-wrapper">
       <h2 class="card-title">
-
-        <a href="{% url 'blog:post' post.slug %}" class="card-title-link">
+        <a href="{{ post.get_absolute_url }}" class="card-title-link">
           {{ post.title }}
         </a>
       </h2>
     </div>
-
     <div class="card-content-wrapper">
       <p class="card-content">
         {{ post.excerpt }} 
       </p>
 
       <div class="card-actions">
-        <a class="card-action-link" href="{% url 'blog:post' post.slug %}">
+        <a class="card-action-link" href="{{ post.get_absolute_url }}">
           <span>Read</span>
           <i class="fa-solid fa-circle-arrow-right"></i>
         </a>
