--- a/djangoapp/blog/templates/blog/pages/post.html
+++ b/djangoapp/blog/templates/blog/pages/post.html
@@ -5,17 +5,18 @@
 <main class="main-content single-post section-wrapper">
   <div class="single-post-content section-content-narrow">
     <div class="single-post-gap section-gap">
-      <div class="single-post-cover pb-base">
-        <img loading="lazy" src="https://picsum.photos/1920/1080/?rand=12" alt="Change me">
-      </div>
 
       <h2 class="single-post-title pb-base center">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        {{ post.title }}
       </h2>
 
       <div class="post-meta pb-base">
         <div class="post-meta-item">
-          <a class="post-meta-link" href="#">
+
+          <a 
+            class="post-meta-link" 
+            href="{% url 'blog:created_by' post.created_by.pk  %}"
+          >            
             <i class="fa-solid fa-user"></i>
             <span>
               Author Full Name
@@ -23,20 +24,12 @@
           </a>
         </div>
         <div class="post-meta-item">
-          <a class="post-meta-link" href="#">
+          <span class="post-meta-link">
             <i class="fa-solid fa-calendar-days"></i>
             <span>
               20/04/2023
             </span>
-          </a>
-        </div>
-        <div class="post-meta-item">
-          <a class="post-meta-link" href="#">
-            <i class="fa-solid fa-tag"></i>
-            <span>
-              Categoria
-            </span>
-          </a>
+          </span>
         </div>
       </div>
 
