--- a/djangoapp/blog/static/blog/css/style.css
+++ b/djangoapp/blog/static/blog/css/style.css
@@ -43,7 +43,6 @@
   --lh-regular: 1.5;
   --lh-headings: 1.2;
   --lh-mono: 1.2;
-
   /* Spacings */
   --spacing-micro: 0.8rem;
   --spacing-smlst: 1.5rem;
@@ -56,11 +55,9 @@
   /* max-width */
   --mw-grid: 120rem;
   --mw-post: 90rem;
-
   /* Border Radius */
   --br-base: 0.4rem;
 }
-
 /* Base */
 html {
   font-size: 62.5%;
@@ -76,12 +73,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
-
 a {
   color: hsl(var(--clr-primary-base));
   text-decoration: none;
 }
-
 a:hover {
   color: hsl(var(--clr-primary-dk));
   text-decoration: underline;
@@ -130,12 +125,15 @@ pre,
 code {
   font-family: var(--ff-mono);
 }
-
 input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
   -webkit-appearance: none;
+}
+
+img {
+  margin: 0 auto;
 }
 
 /* Blog */
@@ -144,43 +142,34 @@ html,
 .blog-wrapper {
   height: 100%;
 }
-
 .blog-wrapper {
   display: flex;
   flex-direction: column;
 }
-
 .main-content {
   flex-grow: 1;
 }
-
 /* Sections */
 .section-content-wide {
   max-width: var(--mw-grid);
 }
-
 .section-content-narrow {
   max-width: var(--mw-post);
 }
-
 .section-content-wide,
 .section-content-narrow {
   margin-inline: auto;
 }
-
 .section-gap {
   padding: var(--spacing-base);
 }
-
 /* Utilities */
 .pb-base {
   padding-bottom: var(--spacing-base);
 }
-
 .center {
   text-align: center;
 }
-
 .separator {
   background: hsl(var(--clr-gray-ltst));
   width: 50%;
@@ -188,7 +177,6 @@ html,
   height: 1px;
   flex-shrink: 0;
 }
-
 /* Screen Reader Only - For Visually hidden elements */
 .sr-only {
   border: 0;
@@ -201,13 +189,11 @@ html,
   position: absolute;
   white-space: nowrap;
 }
-
 /* Header */
 .blog-title,
 .blog-description {
   margin: 0;
 }
-
 /* Menu */
 .menu-items,
 .menu-item {
@@ -215,7 +201,6 @@ html,
   padding: 0;
   list-style-type: none;
 }
-
 .menu-items {
   display: flex;
   align-items: center;
@@ -223,7 +208,6 @@ html,
   flex-flow: row wrap;
   gap: var(--spacing-base);
 }
-
 /* Search */
 .search-content {
   display: flex;
@@ -237,7 +221,6 @@ html,
   margin-inline: auto;
   font-size: inherit;
 }
-
 .search-input {
   width: 100%;
   background-color: transparent;
@@ -251,11 +234,9 @@ html,
 .search-input::placeholder {
   color: hsl(var(--clr-gray-ltr));
 }
-
 .search-input:focus {
   border: 2px solid hsl(var(--clr-primary-base));
 }
-
 .search-btn {
   display: flex;
   align-items: center;
@@ -270,47 +251,38 @@ html,
   padding-inline: var(--spacing-smlst);
   color: hsl(var(--clr-gray-ltr));
 }
-
 .search-content:focus-within .search-btn {
   color: hsl(var(--clr-primary-base));
 }
-
 /* Footer */
 .footer {
   background: hsl(var(--clr-gray-dk));
   color: hsl(var(--clr-white));
 }
-
 .footer a {
   color: hsl(var(--clr-white));
 }
-
 .footer a:hover {
   color: hsl(var(--clr-primary-ltst));
 }
-
 .footer-columns {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: var(--spacing-base);
 }
-
 /* Single Post */
 .single-post-content {
   padding-top: var(--spacing-smlst);
 }
-
 .single-post-title,
 .single-post-excerpt {
   margin: 0;
 }
-
 .single-post-excerpt {
   color: hsl(var(--clr-gray-base));
   font-size: var(--fs-bg);
   font-style: italic;
 }
-
 /* Post Meta */
 .post-meta {
   display: flex;
@@ -319,7 +291,6 @@ html,
   gap: var(--spacing-base);
   flex-flow: row wrap;
 }
-
 .post-meta-link {
   display: flex;
   gap: var(--spacing-micro);
@@ -328,11 +299,9 @@ html,
   color: hsl(var(--clr-gray-base));
   text-decoration: none;
 }
-
 .post-meta-link:hover {
   text-decoration: none;
 }
-
 /* Post tags */
 .post-tags {
   display: flex;
@@ -340,18 +309,15 @@ html,
   align-items: center;
   gap: var(--spacing-smlst);
 }
-
 .post-tags .post-tag-link,
 .post-tags .post-tag-link i {
   color: hsl(var(--clr-gray-base));
 }
-
 .post-tags .post-tag-link:hover,
 .post-tags .post-tag-link:hover i {
   color: hsl(var(--clr-primary-base));
   text-decoration: none;
 }
-
 .post-tag-link {
   display: flex;
   flex-flow: row nowrap;
@@ -359,51 +325,42 @@ html,
   align-items: center;
   gap: var(--spacing-micro);
 }
-
 /* Pagination */
 .pagination-wrapper {
   font-size: var(--fs-bg);
 }
-
 .step-links {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
 }
-
 .step-links > * {
   display: block;
   padding: var(--spacing-micro);
 }
-
 /* Card Grid */
 .card-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(min(32rem, 100%), 1fr));
   gap: var(--spacing-base);
 }
-
 .card {
   border: 1px solid hsl(var(--clr-gray-ltst));
   border-radius: var(--br-base);
   box-shadow: 0 5px 5px hsl(var(--clr-black) / 0.1);
   transition: scale 300ms ease-in-out, box-shadow 300ms ease-in-out;
 }
-
 .card:hover {
   scale: 1.02;
   box-shadow: 0 5px 15px hsl(var(--clr-black) / 0.3);
 }
-
 .card-text-wrapper {
   padding: var(--spacing-base);
 }
-
 .card-cover-wrapper {
   aspect-ratio: 16 / 9;
 }
-
 .card-cover {
   border-radius: var(--br-base) var(--br-base) 0 0;
   aspect-ratio: 16 / 9;
@@ -411,25 +368,20 @@ html,
   object-fit: cover;
   transition: opacity 300ms ease-in-out;
 }
-
 .card-cover:hover {
   opacity: 0.8;
 }
-
 .card-title-link {
   color: inherit;
 }
-
 .card-title-link:hover {
   text-decoration: none;
 }
-
 .card-title {
   font-size: var(--fs-bg);
   margin-top: 0;
   margin-bottom: var(--spacing-micro);
 }
-
 .card-actions {
   display: flex;
   flex-flow: row wrap;
@@ -437,7 +389,6 @@ html,
   justify-content: end;
   gap: var(--spacing-smlst);
 }
-
 .card-action-link {
   display: flex;
   flex-flow: row nowrap;
@@ -445,7 +396,6 @@ html,
   justify-content: center;
   gap: var(--spacing-micro);
 }
-
 .card-action-link:hover {
   text-decoration: none;
 }
