--- a/djangoapp/blog/templates/blog/pages/post.html
+++ b/djangoapp/blog/templates/blog/pages/post.html
@@ -36,7 +36,7 @@
           <span class="post-meta-link">
             <i class="fa-solid fa-calendar-days"></i>
             <span>
-               {{ post.created_at | date:'d/m/Y \à\s H:i' }}
+              {{ post.created_at | date:'d/m/Y \à\s H:i' }}
             </span>
           </span>
         </div>
@@ -55,15 +55,17 @@
         {% endif %}
       
       </div>
+
       <p class="single-post-excerpt pb-base">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, vero
-        fugiat eum perferendis accusamus enim quos obcaecati. Voluptates a vel
-        obcaecati ipsa in dignissimos facere odio et, ab provident assumenda!
+       
+        {{ post.excerpt | safe }}
       </p>
+
       <div class="separator"></div>
+
       <div class="single-post-content">
-        {% include 'blog/partials/_temp.html' %} 
-      
+        {{ post.content | safe  }} 
+
         <div class="post-tags">
           <span>Tags: </span>
           <a class="post-tag-link" href="#">
