--- a/djangoapp/blog/templates/blog/partials/_header.html
+++ b/djangoapp/blog/templates/blog/partials/_header.html
@@ -8,7 +8,6 @@
       {% if site_setup.show_description %}
         <p class="blog-description pb-base center">{{ site_setup.description }}</p>
       {% endif %}
-
       {% if site_setup.show_search %}
         <div class="search pb-base center">
           <form class="search-form" action="{% url 'blog:search' %}" method="get">
@@ -21,6 +20,7 @@
                 id="search-input"
                 placeholder="Search"
                 value="{{ search_value }}"
+                required
               >
               <button class="search-btn" type="submit" aria-labelledby="search-label">
                 <i class="fa fa-search"></i>
@@ -51,3 +51,4 @@
       
     </div>
   </div>
+</header>
